# MattrGlobalRustExercise

./: Cargo.toml  Notes.md  README.md  db.sqlite
migrations/: 000-init.sql
src/: main.rs
src/dao/: mod.rs
src/datastructures/: mod.rs
src/routes/: credentials.rs  cryptographic_keys.rs  mod.rs  schemas.rs
src/routes/internal/: mod.rs
src/test/: mod.rs
